--- a/newsletter.html
+++ b/newsletter.html
@@ -95,6 +95,10 @@
       <input type="text" name="name_on_card" maxlength=16 /><br />
 
     </fieldset>
+    
+    
+    <input type="submit" value="submit" style="margin-left: 50% " />
+    <input type="reset" />
 
 
   </form>
