gave action to my mail

--- a/newsletter.html
+++ b/newsletter.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <form action="newsletter.php" method="get">
+  <form action="mailto:konakanchiritesh5@gmail.com" method="get" encpy="text/plain" >
     <fieldset>
       <legend> Personal information </legend><br />
 
